[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin = { git = "https://github.com/verus-lang/verus.git", rev="a53f39271666ac7dc9f455b6267da4c49a5f75c6" }
vstd = { git = "https://github.com/verus-lang/verus.git", rev="a53f39271666ac7dc9f455b6267da4c49a5f75c6" }
# builtin = { path = "/home/nickolai/refsrc/verus/source/builtin" }
# vstd = { path = "/home/nickolai/refsrc/verus/source/vstd" }
